# vibecounters

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/static/: app.css  app.js  index.html
