[package]
name = "webcounters"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
include_dir = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["trace", "compression-br", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1"
time = { version = "0.3", features = ["macros", "serde", "formatting", "parsing"] }
anyhow = "1"
